@@ -1,3 +1,8 @@
+2004-11-29  Neal H. Walfield  <neal@gnu.org>
+
+	* client-create.c (_hurd_cap_client_create): Deallocate the
+	gratuitous _hurd_cap_client_t, not the one we want to use.
+
 2004-11-01  Marcus Brinkmann  <marcus@gnu.org>
 
 	* cap-server.h (hurd_cap_class_create): Rename to ...
